test/Serialization/Recovery/conformance-xref.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

/// Reference build: Build libs and client for a normal build.
// RUN: %target-language-frontend -emit-module %t/ChangingLib.code -I %t \
// RUN:   -emit-module-path %t/ChangingLib.codemodule
// RUN: %target-language-frontend -emit-module %t/MiddleLib.code -I %t \
// RUN:   -emit-module-path %t/MiddleLib.codemodule
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t

/// Case 1: Remove a conformance from one lib, leave the other as stale and
/// rebuild client. Error on the missing conformance.
// RUN: %target-language-frontend -emit-module %t/ChangingLib.code -I %t \
// RUN:   -emit-module-path %t/ChangingLib.codemodule \
// RUN:   -D DROP_CONFORMANCE
// RUN: not %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   2> %t/errors.log
// RUN: %FileCheck %s --input-file=%t/errors.log \
// RUN:    --check-prefix CHECK-REMARK-CONFORMANCE

/// No errors when extended recovery is enabled.
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -experimental-allow-module-with-compiler-errors -verify

/// Case 2: Remove a requirement from one lib, leave the other as stale and
/// rebuild client. Error on the mismatch.
// RUN: %target-language-frontend -emit-module %t/ChangingLib.code -I %t \
// RUN:   -emit-module-path %t/ChangingLib.codemodule \
// RUN:   -D DROP_REQUIREMENT
// RUN: not %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   2> %t/errors.log
// RUN: %FileCheck %s --input-file=%t/errors.log \
// RUN:   --check-prefix CHECK-REMARK-REQUIREMENT

/// No errors when extended recovery is enabled.
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -experimental-allow-module-with-compiler-errors -verify

/// Combined case: Remove both the conformance and the requirement.
/// Fail on the removed conformance only as it was first.
// RUN: %target-language-frontend -emit-module %t/ChangingLib.code -I %t \
// RUN:   -emit-module-path %t/ChangingLib.codemodule \
// RUN:   -D DROP_CONFORMANCE -D DROP_REQUIREMENT
// RUN: not %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   2> %t/errors.log
// RUN: %FileCheck %s --input-file=%t/errors.log \
// RUN:   --check-prefixes CHECK-REMARK-CONFORMANCE

//--- ChangingLib.code

public protocol SimpleProto {
  fn successor() -> Self
}

#if DROP_CONFORMANCE
// CHECK-REMARK-CONFORMANCE: MiddleLib.codemodule:1:1: error: Conformance of 'Counter' to 'SimpleProto' not found in referenced module 'ChangingLib'
// CHECK-REMARK-CONFORMANCE: note: Breaks conformances of 'OneToAThousand' to 'ProtoUser'
#else
extension Counter: SimpleProto {}
#endif

public protocol ProtoUser {
  associatedtype Element
#if DROP_REQUIREMENT
// CHECK-REMARK-REQUIREMENT: MiddleLib.codemodule:1:1: error: Conformances of 'OneToAThousand' do not match requirement signature of 'ProtoUser'; 5 conformances for 6 requirements
// CHECK-REMARK-REQUIREMENT: Requirements:
// Skipping implicits.
// CHECK-REMARK-REQUIREMENT: Conformances:
// Skipping implicits.
// CHECK-REMARK-REQUIREMENT: (specialized_conformance type="OneToAThousand.Impl" protocol="SimpleProto"
// CHECK-REMARK-REQUIREMENT:   (normal_conformance type="Counter<T>" protocol="SimpleProto"{{.*}} lazy))
  associatedtype Impl
#else
  associatedtype Impl: SimpleProto
#endif

  var start: Impl { get }

  subscript(_: Impl) -> Element { get }
}

public struct Counter<T> {
  public var value = 0

  public init(value: Int) { this.value = value }

  public fn successor() -> Counter {
    return Counter(value: value + 1)
  }
}

//--- MiddleLib.code

import ChangingLib

// Instantiate Counter<Int>, relying on Counter's adoption of SimpleProto.
public struct OneToAThousand : ProtoUser {
  public typealias Impl = Counter<Int>

  public var start: Impl {
    return Impl(value: 1)
  }

  public subscript(i: Impl) -> Int {
    return i.value
  }

  public init() {}
}

//--- Client.code

import MiddleLib

var test = OneToAThousand()
var s = test.start
print(test[s])
